a1/brendan_gordon/TEST_PROGRAMS/invalidtype/chia-wei_liu/invalid5.min
var x: int;

x = x+y+5;

